fixed: about section flex direction, applied hidden overflow-x to body

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
   }
 
   body {
-    @apply font-base bg-neutral-three text-neutral-seven;
+    @apply font-base bg-neutral-three text-neutral-seven overflow-x-hidden;
   }
 
   .light {
